/**
 * You can use conversation as starter project.
 */
syntax = "proto3";
package conversation;

option go_package="conversation/conversationpb";

/** The conversation state. **/
enum ConversationState{
	ACTIVE = 0;
	SUSPENDED = 1;
}


message Message {
	/** The message uuid **/
	string uuid = 1;

	/** The conversation uuid **/
	string conversation = 2;
	
	/** The time will also be use as message id **/
	int64 creation_time = 3;
	
	/** The author of the message **/
	string author = 4;
	
	/** The message body **/
	string text = 5;
	
	/** The uuid of the message that message respond to **/
	string in_reply_to = 6;
	
	/** The message language **/
	string language = 7;
}

message Conversation {
	/** Need to be unique... and trust me it will! */
	string uuid = 1;
	
	/** Not need to be unique.. */
	string name = 2;
	
	/** Array of message uuid */
	repeated  string messages = 3;
	
	/** Keywords **/
	repeated  string keywords = 4;
	
	int64 creation_time = 5;
	
	/** Keep track of when a conversation was suspend or activated **/
	int64 last_message_time = 6;
	
	
	/** The language ex. en, es, fr*/
	string language = 7;
}

/** List of conversation */
message Conversations {
	repeated Conversation conversations=1;
}

/** Connect */
message ConnectRequest{
	string uuid = 1; // a connection uuid.
}

/** The message stream */
message ConnectResponse{
	Message message = 1;
}

message DisconnectRequest{
	string uuid = 1;
}

message DisconnectResponse{
	bool result = 1;
}


/** Create a new conversation **/
message CreateConversationRequest {
	
	/** The name of the conversation to be created **/
	string name = 1;
	
	/** Keywords **/
	repeated  string keywords = 2;
	
	/** The conversation language **/
	string language = 3;
}

message CreateConversationResponse{
	Conversation conversation = 1;
}


message DeleteConversationRequest{
	string conversation_uuid = 1;
}

message DeleteConversationResponse{
	
}

message FindConversationRequest{
	string query = 1;
	string language = 2;
	int32 offset=3;
	int32 pageSize=4;
	int32 snippetSize = 5;
}

message FindConversationResponse{
	repeated Conversation conversations = 1;
}

message JoinConversationRequest{
	/** The conversation uuid */
	string conversation_uuid = 1;
	
	/** The paticipant token */
	string connection_uuid = 2;
}

message JoinConversationResponse{
	Message msg = 1;
}

message GetCreatedConversationsRequest{
	string creator = 1;
}

message GetCreatedConversationsResponse{
	Conversations conversations = 1;
}

message LeaveConversationRequest{
	/** The conversation uuid */
	string conversation_uuid = 1;
	
	/** The paticipant token */
	string connection_uuid = 2;
}

message LeaveConversationResponse{
	
}

message SendMessageRequest {
	/** The conversation uuid */
	Message msg = 1;
}

message SendMessageResponse {

}

message FindMessageRequest{
	repeated string keywords = 1;
}

message FindMessageResponse{
	repeated Message messages = 1;
}

message StopRequest {
	
}

message StopResponse {
	
}

service ConversationService {
	
  // Stop the server.
  rpc Stop(StopRequest) returns (StopResponse);

  //////////////////////////////// Conversation ////////////////////////////////

  // Connect will open a channel between the conversation sever and it client
  // and that channel will be use to send all conversation message.
  rpc Connect(ConnectRequest) returns (stream ConnectResponse);

  // Close connection with the conversation server.
  rpc Disconnect(DisconnectRequest) returns(DisconnectResponse);

  // Create a new conversation with a given name. The creator will became the 
  // owner of that conversation and he will be able to set permissions to
  // determine who can participate to the conversation.
  rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse);

  // Delete the conversation
  rpc DeleteConversation(DeleteConversationRequest) returns (DeleteConversationResponse);

  // Retreive a conversation by keywords or name...
  rpc FindConversation(FindConversationRequest) returns (FindConversationResponse);

  // Join a conversation.
  rpc JoinConversation(JoinConversationRequest) returns (stream JoinConversationResponse);

  // Leave a given conversation.
  rpc LeaveConversation(LeaveConversationRequest) returns (LeaveConversationResponse);

  // Return the list of conversations created by a given user.
  rpc GetCreatedConversations(GetCreatedConversationsRequest) returns (GetCreatedConversationsResponse);

  ////////////////////////////////// Message ///////////////////////////////////

  // Send a message
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  // Retreive a conversation by keywords or name...
  rpc FindMessage(FindMessageRequest) returns (FindMessageResponse);

}